# MySQLite

./: .gitignore  README.md  pyproject.toml
mysqlite/: __init__.py  _version.py  mysqlite.py
