[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MySQLite"
version = "2025.09.17"
description = "Simple wrapper for SQLite"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Pablo GP", email="pablogonzalezpila@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [] # "sqlite3"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
"Homepage" = "https://github.com/PaulFilms/MySQLite"
"Bug Tracker" = "https://github.com/PaulFilms/MySQLite/issues"
