[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MySQLite"
dynamic = ["version"]
description = "Simple wrapper for SQLite"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Pablo GP", email="pablogonzalezpila@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [] # "sqlite3"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = { attr = "mysqlite._version.__version__" }

[project.urls]
"Homepage" = "https://github.com/PaulFilms/MySQLite"
"Bug Tracker" = "https://github.com/PaulFilms/MySQLite/issues"
